# sort-dbt-docs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  sorting_docs.py
sort_dbt_docs/: sort.py  sort_dbt_docfiles.py  sort_dbt_yamlfiles.py  sort_dbt_ymlfiles.py  utils.py
tests/testdata/: cap_low_docs.md  double_docs.md  expected_cap_low_docs.md  expected_double_docs.md  expected_no_empty_lines_docs.md  expected_no_line_breaks_docs.md  expected_special_signs_docs.md  happy_docs.md  no_empty_lines_docs.md  to_sort_docs.md
tests/testdata/markdowns/: cap_low_docs.md  expected_double_docs.md  expected_no_empty_lines_docs.md  no_empty_spaces_dccs.md  no_line_breaks_docs.md  special_signs_docs.md  to_sort_docs.md
tests/testdata/yamls/: eexpected_to_sort_yaml.yaml  expected_to_sort_yaml copy.yaml  happy_yaml.yaml  to_sort_yaml.yaml
tests/unit/: test_sort.py  test_sort_dbt_docfiles.py  test_sort_dbt_ymlfile.py  test_utils.py
