[tool.poetry]
name = "sort-dbt-docs"
version = "0.1.0"
description = "Pre-commit hook that sorts dbt doc blocks in a macro alphabetically"
authors = ["Elisabeth Kury <https://github.com/Elisabeth-Kury>, Leopold Gabelmann <https://github.com/LeopoldGabelmann>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sort_dbt_docs"}]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
