[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Elisabeth Kury <https://github.com/Elisabeth-Kury>, Leopold Gabelmann <https://github.com/LeopoldGabelmann>"]
description = "Pre-commit hook that sorts dbt doc blocks in a macro alphabetically"
license = "MIT"
name = "sort-dbt-docs"
packages = [{include = "sort_dbt_docs"}]
readme = "README.md"
repository = "https://github.com/LeopoldGabelmann/sort-dbt-docs.git"
version = "0.2.0"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
tomli = "^2.0.1"

[tool.poetry.scripts]
sort-dbt-docs = "sort_dbt_docs.sort:main"
